--- a/docs/style/palette.less
+++ b/docs/style/palette.less
@@ -1,8 +1,8 @@
-@backgroud          : #121212;
-@brand-primary      : #f37021;
-@brand-primary-hover: #f37021;
-@high-emphasis      : rgba(255, 255, 255, 0.87);
-@medium-emphasis    : rgba(255, 255, 255, 0.67);
-@disabled           : rgba(255, 255, 255, 0.38);
-@shadow             : #1f1f1f;
-@input              : #313131;
+// Don't use variables! 
+// *Only reference*
+
+@background    : linear-gradient(#111112, #2a292a) fixed;
+@primary       : rgba(243, 112, 33, 1);
+@primary-hover : rgba(243, 112, 33, 0.8);
+@secondary     : rgba(224, 216, 200, 1);
+@secondary-hover : rgba(224, 216, 200, 0.8);
