--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -235,12 +235,6 @@ body {
   padding: 12px;
   border-radius: 4px;
 }
-.swaper > .form-container > .form > .button-container {
-  margin-top: 8px;
-}
-.swaper > .form-container > .form > .button-container > a {
-  font-size: 14px;
-}
 .swaper > .form-container > .form > .button-container > .send-button {
   margin-top: 8px;
   display: block;
@@ -318,6 +312,11 @@ body {
   text-align: center;
   font-size: 12px;
 }
+@media only screen and (max-width: 719px) {
+  .swaper > .warning {
+    width: 90%;
+  }
+}
 .swaper > .warning > img {
   margin-right: 4px;
 }
@@ -369,8 +368,9 @@ body {
   padding: 8px 0px;
 }
 .swaper > .history > .sended-list {
-  width: 100%;
+  width: 90%;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 .swaper > .history > .sended-list > .sended {
