--- a/docs/style/component/swaper.less
+++ b/docs/style/component/swaper.less
@@ -74,12 +74,6 @@
             }
 
             >.button-container {
-                margin-top: 8px;
-
-                >a {
-                    font-size: 14px;
-                }
-
                 >.send-button {
                     margin-top      : 8px;
                     display         : block;
@@ -174,6 +168,10 @@
         text-align     : center;
         font-size      : 12px;
 
+        @media @phone {
+            width: 90%;
+        }
+
         >img {
             margin-right: 4px;
         }
@@ -234,8 +232,9 @@
         }
 
         >.sended-list {
-            width          : 100%;
+            width          : 90%;
             display        : flex;
+            flex-direction : column;
             justify-content: space-around;
 
             >.sended {
